Update PORT to use production URL

--- a/server/.env
+++ b/server/.env
@@ -18,5 +18,5 @@ ANDORAI_API_KEY=KZqNTQ4kVUnDsfiutsWmXqkN
 APILAYER_KEY = ji3xqUYoZ5SxmD9gDlYGYu5pTPVVL2zW
 
 
-PORT=3000
+PORT=https://bhuddhimaan-minor.onrender.com
 NODE_ENV=development
